# powerXAI

./: .gitignore  Principle_examples.ipynb  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: conf.py  index.rst
examples/: README.md  atomic-player-examples.ipynb  disease_model.py  examples.ipynb  set-player-examples.py  utils.py
src/powerxai/: __init__.py  banzhaf_value.py  coalitions.py  counterfactual.py  owen_value.py  shapley_value.py  types.py  upsilon_value.py
tests/: test_banzhaf.py  test_basics.py  test_cardinality_counterfactual.py  test_coalitions.py  test_counterfactual.py  test_maximal_chains.py  test_owen.py  test_shapley.py  test_shapley_weighted_coalitions.py  test_upsilon.py  value_functions.py
